<resources>
    <string name="app_name">Ek Inch</string>
    <string name="app_name_hindi">एक इंच</string>
    <string name="please_wait">प्लीज वेट…</string>
    <string name="name">नाम</string>
    <string name="organization">संगठन</string>
    <string name="profession">प्लीज सेलेक्ट पेशा</string>
    <string name="location">स्थान</string>
    <string name="mobile_number">मोबाइल नंबर</string>
    <string name="password">पासवर्ड</string>
    <string name="adhaar">आधार कार्ड नंबर भरे</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="login_here">लॉगिन हियर</string>
    <string name="welcome_back">वेलकम बैक!</string>
    <string name="login">लॉग इन</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">रजिस्टर नाउ </string>
    <string name="msg_back_press">प्रेस  द  बैक बटन अगेन ट एग्जिट!!!</string>
    <string name="home_ek_inch">Home - Ek inch</string>
    <string name="library">लाइब्रेरी</string>
    <string name="marksheet">रिकॉर्ड</string>
    <string name="notifications">नोटिफिकेशन्स</string>
    <string name="sample_text">this is the sample text</string>
    <string name="sample_question">It is easier to roll a stone up a sloping road than to lift it vertical upwards because ?</string>
    <string name="change_npassword">Change \nPassword</string>
    <string name="old_password">Old password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="get_otp">गैट OTP</string>
    <string name="submit">सबमिट</string>
    <string name="submitted">सबमिटीड</string>
    <string name="rewards">रिवार्ड्स</string>
    <string name="certificate">सर्टिफिकेट</string>
    <string name="rewards_underline"><u>रिवार्ड्स</u></string>
    <string name="generate_ncertificate">जनेरेट \nसर्टिफिकेट</string>
    <string name="x">X</string>
    <string name="enter_otp">एंटर OTP</string>
    <string name="logout">लॉग आउट</string>
    <string name="logout_message">डो यू वांट टो लॉगआउट?</string>
    <string name="unit_measurement"><![CDATA[Unit & Measurement]]></string>
    <string name="record_audio">रिकॉर्ड ऑडियो</string>
    <string name="update">अपडेट</string>
    <string name="msg_mandatory">थिस फील्ड इस मंदतोर्य</string>
    <string name="not_valid_aadhar">कृपया सही आधार कार्ड नंबर भरे</string>
    <string name="please_select_location">प्लीज सेलेक्ट लोकेशन</string>
    <string name="txt_stop">स्टॉप</string>
    <string name="txt_hear_recording">हरिकॉर्डिंग सुने</string>
    <string name="txt_record_video">रिकॉर्ड वीडियो</string>
    <string name="txt_playing">प्लेइंग</string>
    <string name="msgNoFileToUpload">नो फाइल टो अपलोड</string>
    <string name="txtVideoRecorded">वीडियो रिकार्डेड</string>
    <string name="txtViewRecording">व्यू रिकॉर्डिंग </string>
    <string name="total_marks">टोटल मार्क</string>
    <string name="marks_obtained">मार्क ओब्तैनेड</string>
    <string name="share">शेयर</string>
    <string name="home">होम</string>
    <string name="cancel">कैंसिल</string>
    <string name="close">क्लोज</string>
    <string name="search_here">यहां सर्च करे</string>
    <string name="txt_no_product_found">नो आईटम फाउंड</string>
    <string name="upload_image_message">डू यू वॉन्ट टू अपलोड प्रोफ़ाइल फोटो?</string>
    <string name="image_view_content_description">image_view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="agora_app_id">543be747f85740c2bd74bb28f4cbf3fd</string>-->
    <string name="agora_app_id">3d6c8fcaa6c1489ea728dd5deabeef63</string>
    <string name="hippo_rationale_ask_again">This app may not work correctly without the requested permissions.         Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="vw_all">All</string>
    <string name="vw_rationale_storage">Need Reading Storage Permission for Picking Files</string>
    <string name="vw_no_video_app">No video app found</string>
    <string name="upload_task_vdeo">अपलोड टास्क वीडियो</string>
    <string name="upload_work_video">काम का वीडियो अपलोड करें</string>
</resources>