<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/homeScreenBottomContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/homeImageView"
            android:layout_width="@dimen/wallet_button_size"
            android:layout_height="@dimen/wallet_button_size"
            android:layout_centerVertical="true"
            android:padding="@dimen/pin_label_margin"
            android:src="@drawable/ic_home"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/homeBottomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/homeImageView"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/gap_small_v2"
            android:layout_marginBottom="@dimen/gap_small_v2"
            android:layout_toEndOf="@+id/homeBottomTextView"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/libraryImageView"
            android:layout_width="@dimen/wallet_button_size"
            android:layout_height="@dimen/wallet_button_size"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/gap_large_v2"
            android:layout_toEndOf="@+id/view2"
            android:padding="@dimen/pin_label_margin"
            android:src="@drawable/ic_library"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/libraryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/libraryImageView"
            android:text="@string/library"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text" />

        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/gap_small_v2"
            android:layout_marginBottom="@dimen/gap_small_v2"
            android:layout_toEndOf="@+id/libraryTextView"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/markSheetImageView"
            android:layout_width="@dimen/wallet_button_size"
            android:layout_height="@dimen/wallet_button_size"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/gap_large_v2"
            android:layout_toEndOf="@+id/view3"
            android:padding="@dimen/pin_label_margin"
            android:src="@drawable/ic_mark_sheet"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/markSheetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/markSheetImageView"
            android:text="@string/marksheet"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>